<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="titel_hello">Привет, Практикум</string>
    <string name="support_string">Написать в поддержку</string>
    <string name="user_accept">Пользовательское соглашение</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="dark_thema">Тёмная тема</string>
    <string name="androidDeveloper">https://practicum.yandex.kz/profile/android-developer</string>
    <string name="theme_for_support">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="text_for_support">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="customer_agreement">https://yandex.ru/legal/practicum_offer/</string>

    <string name="no_song">Ничего не нашлось</string>
    <string name="no_internet_line">Проблема со связью\n\nЗагрузка не удалась.Проверьте\nnодключение к интернет</string>
    <string name="refresh">Обновить</string>

    <string name="track_history_header_searchActivity">Вы искали</string>
    <string name="track_history_button">Очистить историю</string>

    <string name="time_duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
</resources>