<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_main"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_gravity="top">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_marginLeft="@dimen/mergin_16dp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/main_titel"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />
        </FrameLayout>

        <Button
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/mergin_16dp"
            android:layout_marginTop="@dimen/mergin_16dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/button_color"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/search"
            android:textColor="@color/text_button"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            app:cornerRadius="@dimen/button_rad"
            app:icon="@drawable/search"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding"
            app:iconTint="@color/icon_color">

        </Button>

        <Button
            android:id="@+id/library"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/mergin_16dp"
            android:layout_weight="1"
            android:backgroundTint="@color/button_color"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/library"
            android:textColor="@color/text_button"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            app:cornerRadius="@dimen/button_rad"
            app:icon="@drawable/library"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding"
            app:iconTint="@color/icon_color">

        </Button>

        <Button
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/mergin_16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="@dimen/mergin_16dp"
            android:layout_weight="1"
            android:backgroundTint="@color/button_color"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/settings"
            android:textColor="@color/text_button"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            app:cornerRadius="@dimen/button_rad"
            app:icon="@drawable/settings"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding"
            app:iconTint="@color/icon_color">

        </Button>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>