<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_56dp"
            android:layout_gravity="top"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="304dp"
                android:layout_height="match_parent"
                android:layout_gravity="top">

                <Button
                    android:id="@+id/backToMain"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:backgroundTint="@color/white"
                    android:contentDescription="null"
                    app:icon="@drawable/arrow"
                    app:iconGravity="textStart"
                    app:iconTint="@color/icon_color" />

                <TextView
                    android:layout_width="208dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="top"
                    android:gravity="center_vertical"
                    android:paddingLeft="12dp"
                    android:text="@string/settings"
                    android:textColor="@color/black"
                    android:textSize="26dp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_56dp"
            android:layout_gravity="start"
            android:paddingLeft="@dimen/padding_16dp">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">

                <TextView
                    android:layout_width="@dimen/layout_width_300"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:gravity="center_vertical"
                    android:text="@string/dark_thema"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </FrameLayout>

            <Switch
                android:layout_width="@dimen/width_56dp"
                android:layout_height="match_parent"
                android:layout_gravity="end" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_56dp"
            android:layout_gravity="start"
            android:paddingLeft="@dimen/padding_16dp">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">

                <TextView
                    android:layout_width="@dimen/layout_width_300"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:gravity="center_vertical"
                    android:text="@string/share_app"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </FrameLayout>

            <ImageView
                android:layout_width="@dimen/width_56dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:scaleType="center"
                android:src="@drawable/share" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_56dp"
            android:layout_gravity="start"
            android:paddingLeft="@dimen/padding_16dp">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">

                <TextView
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:gravity="center_vertical"
                    android:text="@string/support_string"
                    android:textSize="@dimen/text_size_16sp"
                    android:textStyle="bold" />
            </FrameLayout>

            <ImageView
                android:layout_width="@dimen/width_56dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:scaleType="center"
                android:src="@drawable/support" />

        </FrameLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_56dp"
            android:layout_gravity="start"
            android:paddingLeft="@dimen/padding_16dp">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">

                <TextView
                    android:layout_width="@dimen/layout_width_300"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:gravity="center_vertical"
                    android:text="@string/user_accept"
                    android:textSize="@dimen/text_size_16sp"
                    android:textStyle="bold" />
            </FrameLayout>

            <ImageView
                android:layout_width="@dimen/width_56dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:scaleType="center"
                android:src="@drawable/arrow_forward" />

        </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>