<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LibraryActivity">

    <com.google.android.material.appbar.MaterialToolbar
        style="@style/material_toolbar_library_ac"
        android:id="@+id/backToMainArrow"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/songCoverImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="h,1:1"
        android:layout_marginTop="26dp"
        app:layout_constraintEnd_toEndOf="@+id/rightBorder"
        app:layout_constraintStart_toStartOf="@+id/leftBorder"
        app:layout_constraintTop_toBottomOf="@+id/backToMainArrow" />

    <TextView
        style="@style/textview_between_cover_and_button"
        android:id="@+id/track_name_view"
        android:layout_marginTop="24dp"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@+id/songCoverImage"
        app:layout_constraintEnd_toEndOf="@+id/rightBorder"
        app:layout_constraintStart_toStartOf="@+id/leftBorder" />

    <TextView
        style="@style/textview_between_cover_and_button"
        android:id="@+id/artist_name_view"
        android:layout_marginTop="64dp"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/songCoverImage"
        app:layout_constraintEnd_toEndOf="@+id/rightBorder"
        app:layout_constraintStart_toStartOf="@+id/leftBorder" />

    <ImageButton
        style="@style/add_button_right_view_la"
        android:id="@+id/add_button_right"
        app:layout_constraintStart_toEndOf="@+id/leftBorder"
        app:layout_constraintEnd_toStartOf="@+id/play_button_center"
        app:layout_constraintTop_toBottomOf="@+id/songCoverImage"/>

    <ImageButton
        style="@style/play_button_center_view_la"
        android:id="@+id/play_button_center"
        app:layout_constraintEnd_toStartOf="@+id/like_button_left"
        app:layout_constraintStart_toEndOf="@+id/add_button_right"
        app:layout_constraintTop_toBottomOf="@+id/songCoverImage"/>
<!--    app:srcCompat="@drawable/ic_baseline_arrow_back_24"-->
<!--    android:contentDescription="@string/menu_button"-->

    <ImageButton
        style="@style/like_button_left_view_la"
        android:id="@+id/like_button_left"
        app:layout_constraintEnd_toEndOf="@+id/rightBorder"
        app:layout_constraintStart_toEndOf="@+id/play_button_center"
        app:layout_constraintTop_toBottomOf="@+id/songCoverImage"/>

    <TextView
        style="@style/active_play_time"
        android:id="@+id/active_play_time"
        app:layout_constraintTop_toBottomOf="@+id/play_button_center"
        app:layout_constrainedWidth="true"
        app:layout_constrainedHeight="true"
        app:layout_constraintStart_toEndOf="@+id/leftBorder"
        app:layout_constraintEnd_toEndOf="@+id/rightBorder" />

    <TextView
        style="@style/media_player_textviews_right"
        android:id="@+id/track_duration_view"
        android:layout_marginTop="258dp"
        android:text="@string/time_duration"
        app:layout_constraintTop_toBottomOf="@+id/songCoverImage"
        app:layout_constraintEnd_toStartOf="@+id/track_durationValue_view"
        app:layout_constraintHeight_max="32dp"
        app:layout_constraintStart_toStartOf="parent"/>


    <TextView
        style="@style/media_player_textviews_left"
        android:id="@+id/track_durationValue_view"
        android:layout_marginTop="258dp"
        app:layout_constraintTop_toBottomOf="@+id/songCoverImage"
        app:layout_constraintStart_toEndOf="@+id/track_duration_view"
    app:layout_constraintHeight_max="32dp"
    app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        style="@style/media_player_textviews_right"
        android:id="@+id/track_album_view"
        android:text="@string/album"
        app:layout_constraintTop_toBottomOf="@+id/track_duration_view"
        app:layout_constraintEnd_toStartOf="@+id/track_albumValue_view"
        app:layout_constraintHeight_max="32dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        style="@style/media_player_textviews_left"
        android:id="@+id/track_albumValue_view"
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:ellipsize="start"
        app:layout_constraintTop_toBottomOf="@+id/track_durationValue_view"
        app:layout_constraintStart_toEndOf="@+id/track_album_view"
        app:layout_constraintHeight_max="32dp"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/album_view_visibility_control"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="track_album_view,track_albumValue_view" />

    <TextView
        style="@style/media_player_textviews_right"
        android:id="@+id/track_ear_view"
        android:text="@string/year"
        app:layout_constraintTop_toBottomOf="@+id/track_album_view"
        app:layout_constraintEnd_toStartOf="@+id/track_yearValue_view"
        app:layout_constraintHeight_max="32dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        style="@style/media_player_textviews_left"
        android:id="@+id/track_yearValue_view"
        app:layout_constraintTop_toBottomOf="@+id/track_albumValue_view"
        app:layout_constraintStart_toEndOf="@+id/track_ear_view"
        app:layout_constraintHeight_max="32dp"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        style="@style/media_player_textviews_right"
        android:id="@+id/track_style_view"
        android:text="@string/genre"
        app:layout_constraintTop_toBottomOf="@+id/track_ear_view"
        app:layout_constraintEnd_toStartOf="@+id/track_yearValue_view"
        app:layout_constraintHeight_max="32dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        style="@style/media_player_textviews_left"
        android:id="@+id/track_styleValue_view"
        app:layout_constraintTop_toBottomOf="@+id/track_yearValue_view"
        app:layout_constraintStart_toEndOf="@+id/track_style_view"
        app:layout_constraintHeight_max="32dp"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        style="@style/media_player_textviews_right"
        android:id="@+id/track_contry_view"
        android:text="@string/country"
        app:layout_constraintTop_toBottomOf="@+id/track_style_view"
        app:layout_constraintEnd_toStartOf="@+id/track_styleValue_view"
        app:layout_constraintHeight_max="32dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        style="@style/media_player_textviews_left"
        android:id="@+id/track_contryValue_view"
        app:layout_constraintTop_toBottomOf="@+id/track_styleValue_view"
        app:layout_constraintStart_toEndOf="@+id/track_style_view"
        app:layout_constraintHeight_max="32dp"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>

